--- a/SalesWebMVC/Views/Sellers/Index.cshtml
+++ b/SalesWebMVC/Views/Sellers/Index.cshtml
@@ -1,5 +1,55 @@
-﻿@page
-@model SalesWebMVC.Views.Sellers.IndexModel
+﻿
+@model IEnumerable<SalesWebMVC.Models.Seller>
+
 @{
+    ViewData["Title"] = "Sellers";
 }
-<h1>Sellers</h1>
+
+<h2>@ViewData["Title"]</h2>
+
+<table class="table table-striped table-hover">
+    <thead>
+        <tr class="bg-success">
+            <th>
+                @Html.DisplayNameFor(model => model.Name);
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email);
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BirthDate);
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BaseSalary);
+            </th>
+            <th>
+
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+        <tr>
+            <td>
+                @Html.DisplayFor(ModelIem => item.Name);
+            </td>
+            <td>
+                @Html.DisplayFor(ModelIem => item.Email);
+            </td>
+            <td>
+                @Html.DisplayFor(ModelIem => item.BirthDate);
+            </td>
+            <td>
+                @Html.DisplayFor(ModelIem => item.BaseSalary);
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-Id="@item.Id">Edit</a>
+                <a asp-action="Details" asp-route-Id="@item.Id">Details</a>
+                <a asp-action="Delete" asp-route-Id="@item.Id">Delete</a>
+            </td>
+        </tr>
+
+    }
+        </tbody>
+    </table>
