--- a/SalesWebMVC/Views/Sellers/Index.cshtml
+++ b/SalesWebMVC/Views/Sellers/Index.cshtml
@@ -7,20 +7,24 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<p >
+    <a asp-action="Create" class="btn btn-info">Create New</a>
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="bg-success">
             <th>
-                @Html.DisplayNameFor(model => model.Name);
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Email);
+                @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.BirthDate);
+                @Html.DisplayNameFor(model => model.BirthDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.BaseSalary);
+                @Html.DisplayNameFor(model => model.BaseSalary)
             </th>
             <th>
 
@@ -32,16 +36,16 @@
         {
         <tr>
             <td>
-                @Html.DisplayFor(ModelIem => item.Name);
+                @Html.DisplayFor(ModelIem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(ModelIem => item.Email);
+                @Html.DisplayFor(ModelIem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(ModelIem => item.BirthDate);
+                @Html.DisplayFor(ModelIem => item.BirthDate)
             </td>
             <td>
-                @Html.DisplayFor(ModelIem => item.BaseSalary);
+                @Html.DisplayFor(ModelIem => item.BaseSalary)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-Id="@item.Id">Edit</a>
@@ -49,7 +53,6 @@
                 <a asp-action="Delete" asp-route-Id="@item.Id">Delete</a>
             </td>
         </tr>
-
     }
         </tbody>
     </table>
