--- a/SalesWebMVC/Views/Sellers/Index.cshtml
+++ b/SalesWebMVC/Views/Sellers/Index.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<SalesWebMVC.Models.Seller>
 
 @{
-    ViewData["Title"] = "Sellers";
+    ViewData["Title"] = "Vendedores";
 }
 
 <h2>@ViewData["Title"]</h2>
